Fix local filename on windows for ofx banking

BUG: 396286
FIXED-IN: 5.0.9